[gd_scene load_steps=29 format=3 uid="uid://dhplvlnmkohun"]

[ext_resource type="Texture2D" uid="uid://n5yvmanbmw7p" path="res://enemies/ghost/ghost.png" id="1_3tkra"]
[ext_resource type="Script" path="res://enemies/ghost/ghost.gd" id="1_fgp5q"]
[ext_resource type="Script" path="res://enemies/ghost/Ghost_StateMachine.gd" id="2_6kewg"]
[ext_resource type="Texture2D" uid="uid://dealtcai7dujr" path="res://Assets/vine_timer_outline.png" id="3_fnwob"]
[ext_resource type="Script" path="res://enemies/ghost/Patrolling.gd" id="3_lrtn3"]
[ext_resource type="Texture2D" uid="uid://ckrs63p8xh7or" path="res://Assets/vine_timer_bar.png" id="4_35gjg"]
[ext_resource type="Script" path="res://enemies/ghost/Hostile.gd" id="5_v1esh"]
[ext_resource type="Script" path="res://enemies/ghost/Knockback.gd" id="6_1w2xa"]
[ext_resource type="Script" path="res://enemies/ghost/Attacking.gd" id="7_h3lqr"]
[ext_resource type="Script" path="res://enemies/ghost/Dead.gd" id="7_phu1t"]
[ext_resource type="Script" path="res://enemies/ghost/Bind.gd" id="9_i5vlb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bylx"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wb865"]
size = Vector2(16, 4)

[sub_resource type="Animation" id="Animation_5odh8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureProgressBar:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TextureProgressBar:value")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_mpf40"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ghost_StateMachine/Attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_hxe80"]
resource_name = "bound"
length = 5.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4, 4.01, 4.02, 4.03, 4.04, 4.05, 4.06, 4.07, 4.08, 4.09, 4.1, 4.11, 4.12, 4.13, 4.14, 4.15, 4.16, 4.17, 4.18, 4.19, 4.2, 4.21, 4.22, 4.23, 4.24, 4.25, 4.26, 4.27, 4.28, 4.29, 4.3, 4.31, 4.32, 4.33, 4.34, 4.35, 4.36, 4.37, 4.38, 4.39, 4.4, 4.41, 4.42, 4.43, 4.44, 4.45, 4.46, 4.47, 4.48, 4.49, 4.5, 4.51, 4.52, 4.53, 4.54, 4.55, 4.56, 4.57, 4.58, 4.59, 4.6, 4.61, 4.62, 4.63, 4.64, 4.65, 4.66, 4.67, 4.68, 4.69, 4.7, 4.71, 4.72, 4.73, 4.74, 4.75, 4.76, 4.77, 4.78, 4.79, 4.8, 4.81, 4.82, 4.83, 4.84, 4.85, 4.86, 4.87, 4.88, 4.89, 4.9, 4.91, 4.92, 4.93, 4.94, 4.95, 4.96, 4.97, 4.98, 4.99, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureProgressBar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureProgressBar:value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}

[sub_resource type="Animation" id="Animation_gpjd5"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ecs0v"]
resource_name = "moving"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wd22w"]
_data = {
"RESET": SubResource("Animation_5odh8"),
"attack": SubResource("Animation_mpf40"),
"bound": SubResource("Animation_hxe80"),
"dead": SubResource("Animation_gpjd5"),
"moving": SubResource("Animation_ecs0v")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_3ir84"]
radius = 66.0076

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4lsg"]
size = Vector2(98, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g271j"]
size = Vector2(94, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88dik"]
size = Vector2(15.5, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_836mx"]
size = Vector2(15.5, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsxby"]
size = Vector2(14, 16)

[sub_resource type="Animation" id="Animation_suubo"]
resource_name = "Knockback"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-400.0, -200.0, -100.0]
}

[sub_resource type="Animation" id="Animation_154yl"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ua5l"]
_data = {
"Knockback": SubResource("Animation_suubo"),
"RESET": SubResource("Animation_154yl")
}

[node name="Ghost" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_fgp5q")
metadata/_edit_group_ = true

[node name="alive_collision" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_4bylx")

[node name="dead_collision_area" type="Area2D" parent="."]

[node name="dead_collision" type="CollisionShape2D" parent="dead_collision_area"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_wb865")
disabled = true
debug_color = Color(0.772549, 0.0784314, 0.247059, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3tkra")
hframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wd22w")
}

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -7.0
offset_top = -15.0
offset_right = 7.0
offset_bottom = -11.0
texture_over = ExtResource("3_fnwob")
texture_progress = ExtResource("4_35gjg")
texture_progress_offset = Vector2(1, 1)

[node name="sight_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight_area"]
shape = SubResource("CircleShape2D_3ir84")

[node name="patrol_left" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="patrol_left"]
position = Vector2(-55, 0)
shape = SubResource("RectangleShape2D_y4lsg")
debug_color = Color(0.87451, 0.317647, 0.360784, 0.419608)

[node name="patrol_right" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="patrol_right"]
position = Vector2(55, 0)
shape = SubResource("RectangleShape2D_g271j")
debug_color = Color(0.87451, 0.317647, 0.360784, 0.419608)

[node name="attackbox_right" type="Area2D" parent="."]
position = Vector2(11, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackbox_right"]
position = Vector2(-3.25, 0)
shape = SubResource("RectangleShape2D_88dik")

[node name="attackbox_left" type="Area2D" parent="."]
position = Vector2(-11, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackbox_left"]
position = Vector2(3.25, 0)
shape = SubResource("RectangleShape2D_836mx")

[node name="collision_detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_detector"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_vsxby")
debug_color = Color(0.341176, 0.498039, 0.964706, 0.419608)

[node name="Ghost_StateMachine" type="Node" parent="."]
script = ExtResource("2_6kewg")
initial_state = NodePath("Patrolling")

[node name="Patrolling" type="Node" parent="Ghost_StateMachine"]
script = ExtResource("3_lrtn3")

[node name="Hostile" type="Node" parent="Ghost_StateMachine"]
script = ExtResource("5_v1esh")

[node name="Knockback" type="Node" parent="Ghost_StateMachine"]
script = ExtResource("6_1w2xa")

[node name="Attacking" type="Node" parent="Ghost_StateMachine"]
script = ExtResource("7_h3lqr")

[node name="Dead" type="Node" parent="Ghost_StateMachine"]
script = ExtResource("7_phu1t")

[node name="Bind" type="Node" parent="Ghost_StateMachine"]
script = ExtResource("9_i5vlb")

[node name="Knockback" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ua5l")
}

[connection signal="bind" from="." to="Ghost_StateMachine" method="_on_ghost_bind"]
[connection signal="change_to_dead" from="." to="Ghost_StateMachine" method="_on_ghost_change_to_dead"]
[connection signal="change_to_knockback" from="." to="Ghost_StateMachine" method="_on_ghost_change_to_knockback"]
[connection signal="animation_finished" from="AnimationPlayer" to="Ghost_StateMachine/Attacking" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Ghost_StateMachine/Dead" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Ghost_StateMachine/Bind" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="sight_area" to="Ghost_StateMachine" method="_on_sight_area_body_entered"]
[connection signal="body_entered" from="patrol_left" to="Ghost_StateMachine" method="_on_patrol_left_body_entered"]
[connection signal="body_entered" from="patrol_right" to="Ghost_StateMachine/Patrolling" method="_on_patrol_right_body_entered"]
[connection signal="body_entered" from="attackbox_right" to="Ghost_StateMachine/Hostile" method="_on_attackbox_right_body_entered"]
[connection signal="body_entered" from="attackbox_right" to="Ghost_StateMachine/Attacking" method="_on_attackbox_right_body_entered"]
[connection signal="body_exited" from="attackbox_right" to="Ghost_StateMachine/Attacking" method="_on_attackbox_right_body_exited"]
[connection signal="body_entered" from="attackbox_left" to="Ghost_StateMachine/Hostile" method="_on_attackbox_left_body_entered"]
[connection signal="body_entered" from="attackbox_left" to="Ghost_StateMachine/Attacking" method="_on_attackbox_left_body_entered"]
[connection signal="body_exited" from="attackbox_left" to="Ghost_StateMachine/Attacking" method="_on_attackbox_left_body_exited"]
[connection signal="animation_finished" from="Knockback" to="Ghost_StateMachine/Knockback" method="_on_knockback_animation_finished"]
